[gd_scene load_steps=6 format=3 uid="uid://c8dsenyov7l5d"]

[ext_resource type="Texture2D" uid="uid://curojrdmmapiv" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://shooter/shooter.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c8e5pvstjty2u" path="res://bullet/Bullet.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://depcoikc380d4" path="res://shooter/gun_glock.png" id="5_gp5bb"]

[sub_resource type="CircleShape2D" id="1"]
radius = 32.0

[node name="ShooterKine" type="CharacterBody2D"]
script = ExtResource("2")
projectile_scene = ExtResource("3")

[node name="ShooterSprite" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="ShooterCollision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="ShootDirection" type="RayCast2D" parent="."]

[node name="SpawnOrigin" type="Marker2D" parent="."]

[node name="ProjectileSpawn" type="Sprite2D" parent="SpawnOrigin"]
position = Vector2(107.3, 0)
scale = Vector2(0.87125, 1)
texture = ExtResource("5_gp5bb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
